--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ footer .overlay {
 }
 
 #home {
-    background-image: url(../images/home1.JPG);
+    background-image: url(../images/home1-compress.JPG);
     background-attachment: fixed;
     background-position: 50%;
     background-size: cover;
