allow iphone to see bg add importance

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -47,9 +47,9 @@
     }
 
     section {
-       background-attachment:initial;
+       background-attachment: initial !important;
     } 
-    
+
     .col-centered {
         display:inline-block;
         float:none;
