changed footer download translation

--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,13 @@ footer {
     position: relative;
 }
 
-footer a, footer a:focus {
+footer a {
     color: #fff;
     margin: 0 5px;
+}
+
+footer a:focus {
+    color: #fff;
 }
 
 footer h3 {
